--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "03-march-junior-pw",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "test": "npx playwright test"
+  }, 
   "keywords": [],
   "author": "Oleksandr Khotemskyi <xotabu4@gmail.com>",
   "license": "ISC",
